// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/marketplace/navigation_row should not render any buttons 1`] = `
<div
  className="navigation-row"
>
  <div
    className="col-xs-2"
  />
  <div
    className="col-xs-8 count"
    style={
      Object {
        "color": "rgba(255,255,255,0.6)",
      }
    }
  >
    <MemoizedFormattedMessage
      defaultMessage="{startCount, number} - {endCount, number} {total, plural, one {plugin} other {plugins}} of {total, number} total"
      id="marketplace_list.count_total_page"
      values={
        Object {
          "endCount": 15,
          "startCount": 1,
          "total": 15,
        }
      }
    />
  </div>
  <div
    className="col-xs-2"
  />
</div>
`;

exports[`components/marketplace/navigation_row should render next and previous buttons 1`] = `
<div
  className="navigation-row"
>
  <div
    className="col-xs-2"
  >
    <NavigationButton
      defaultMessage="Previous"
      messageId="more_channels.prev"
      onClick={[MockFunction]}
    />
  </div>
  <div
    className="col-xs-8 count"
    style={
      Object {
        "color": "rgba(255,255,255,0.6)",
      }
    }
  >
    <MemoizedFormattedMessage
      defaultMessage="{startCount, number} - {endCount, number} {total, plural, one {plugin} other {plugins}} of {total, number} total"
      id="marketplace_list.count_total_page"
      values={
        Object {
          "endCount": 30,
          "startCount": 16,
          "total": 32,
        }
      }
    />
  </div>
  <div
    className="col-xs-2"
  >
    <NavigationButton
      defaultMessage="Next"
      messageId="more_channels.next"
      onClick={[MockFunction]}
    />
  </div>
</div>
`;

exports[`components/marketplace/navigation_row should render only next button 1`] = `
<div
  className="navigation-row"
>
  <div
    className="col-xs-2"
  />
  <div
    className="col-xs-8 count"
    style={
      Object {
        "color": "rgba(255,255,255,0.6)",
      }
    }
  >
    <MemoizedFormattedMessage
      defaultMessage="{startCount, number} - {endCount, number} {total, plural, one {plugin} other {plugins}} of {total, number} total"
      id="marketplace_list.count_total_page"
      values={
        Object {
          "endCount": 15,
          "startCount": 1,
          "total": 32,
        }
      }
    />
  </div>
  <div
    className="col-xs-2"
  >
    <NavigationButton
      defaultMessage="Next"
      messageId="more_channels.next"
      onClick={[MockFunction]}
    />
  </div>
</div>
`;

exports[`components/marketplace/navigation_row should render only previous button 1`] = `
<div
  className="navigation-row"
>
  <div
    className="col-xs-2"
  >
    <NavigationButton
      defaultMessage="Previous"
      messageId="more_channels.prev"
      onClick={[MockFunction]}
    />
  </div>
  <div
    className="col-xs-8 count"
    style={
      Object {
        "color": "rgba(255,255,255,0.6)",
      }
    }
  >
    <MemoizedFormattedMessage
      defaultMessage="{startCount, number} - {endCount, number} {total, plural, one {plugin} other {plugins}} of {total, number} total"
      id="marketplace_list.count_total_page"
      values={
        Object {
          "endCount": 32,
          "startCount": 31,
          "total": 32,
        }
      }
    />
  </div>
  <div
    className="col-xs-2"
  />
</div>
`;
